--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,47 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/$CACHE_FILE$
+.idea/.gitignore
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/inspectionProfiles/
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+nana-core-map/nana-core-map.iml
+nana-core-map/pom.xml.versionsBackup
+nana-core-map/target/apidocs/
+nana-core-map/target/generated-sources/
+nana-core-map/target/generated-test-sources/
+nana-core-map/target/javadoc-bundle-options/
+nana-core-map/target/maven-archiver/
+nana-core-map/target/maven-status/
+nana-core-mybatis/nana-core-mybatis.iml
+nana-core-mybatis/pom.xml.versionsBackup
+nana-core-mybatis/src/
+nana-core-mybatis/target/classes/
+nana-core-mybatis/target/javadoc-bundle-options/
+nana-core-mybatis/target/maven-archiver/
+nana-core-mybatis/target/maven-status/
+nana-core-oss/nana-core-oss.iml
+nana-core-oss/pom.xml.versionsBackup
+nana-core-oss/target/apidocs/
+nana-core-oss/target/classes/META-INF/
+nana-core-oss/target/classes/application.yml
+nana-core-oss/target/generated-sources/
+nana-core-oss/target/javadoc-bundle-options/
+nana-core-oss/target/maven-archiver/
+nana-core-oss/target/maven-status/
+nana-core-tool/nana-core-tool.iml
+nana-core-tool/pom.xml.versionsBackup
+nana-core-tool/target/
+nana-core-validate/nana-core-validate.iml
+nana-core-validate/pom.xml.versionsBackup
+nana-core-validate/src/
+nana-tool.iml
+pom.xml.versionsBackup
+nana-core-oss/target/
+nana-core-validate/target/
