--- a/nana-core-oss/pom.xml
+++ b/nana-core-oss/pom.xml
@@ -7,26 +7,54 @@
     <parent>
         <artifactId>nana-tool</artifactId>
         <groupId>org.bingjian</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>nana-core-oss</artifactId>
     <name>${project.artifactId}</name>
-    <version>${nana.tool.version}</version>
+    <version>${parent.version}</version>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!--QiNiu-->
+        <dependency>
+            <groupId>org.bingjian</groupId>
+            <artifactId>nana-core-tool</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <!-- 华为云 -->
+        <dependency>
+            <groupId>com.huaweicloud</groupId>
+            <artifactId>esdk-obs-java</artifactId>
+            <version>3.20.6.1</version>
+        </dependency>
+        <!-- minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.0.0</version>
+        </dependency>
+        <!-- 青牛云 -->
         <dependency>
             <groupId>com.qiniu</groupId>
             <artifactId>qiniu-java-sdk</artifactId>
-            <version>7.2.18</version>
+            <version>7.4.0</version>
         </dependency>
-        <!--alioss-->
+        <!-- 阿里云 -->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
-            <version>3.1.0</version>
+            <version>3.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>pollexor</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <!-- AWS云 -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.926</version>
         </dependency>
     </dependencies>
 
